Add variable BARBICAN_ENDPOINT to local.conf. now it is not needed to replace localhost with the barbican endpoint.

--- a/puppet/modules/devstack/templates/local.erb
+++ b/puppet/modules/devstack/templates/local.erb
@@ -18,6 +18,8 @@ DATABASE_TYPE=mysql
 
 # barbican configuration
 
+BARBICAN_ENDPOINT="http://<%= @hostname_manager %>:9311"
+
 <% if defined?(@barbican_branch) %>
 BARBICAN_BRANCH="stable/kilo"
 <% else %>
