--- a/puppet/modules/barbican/templates/Z99-barbican.erb
+++ b/puppet/modules/barbican/templates/Z99-barbican.erb
@@ -5,3 +5,9 @@ export BARBICAN_BRANCH="<%= @barbican_branch %>"
 <% else %>
 export BARBICAN_BRANCH="stable/kilo"
 <% end %>
+
+<% if defined?(@hostname_manager) %>
+export BARBICAN_HOST_HREF="http://<%= @hostname_manager %>:9311"
+<% else %>
+export BARBICAN_HOST_HREF="http://localhost:9311"
+<% end %>
