Use devstack_branch if no barbican_branch defined

--- a/puppet/modules/barbican/templates/Z99-barbican.erb
+++ b/puppet/modules/barbican/templates/Z99-barbican.erb
@@ -2,6 +2,8 @@
 
 <% if defined?(@barbican_branch) %>
 export BARBICAN_BRANCH="<%= @barbican_branch %>"
+<% elsif defined?(@devstack_branch) %>
+export BARBICAN_BRANCH="<%= @devstack_branch %>"
 <% else %>
 export BARBICAN_BRANCH="stable/kilo"
 <% end %>
